--- a/css/main.css
+++ b/css/main.css
@@ -34,7 +34,7 @@ svg {
 :focus {
     outline-width: 2px;
     outline-style: solid;
-    outline-color: yellow;
+    outline-color: hotpink;
 }
 
 /* CONTAINERS AND WRAPPERS */
